[metadata]
name = haiku
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A command-line interface for interacting with Ollama AI models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/haiku
project_urls =
    Bug Tracker = https://github.com/yourusername/haiku/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Utilities

[options]
py_modules = ["haiku"]
python_requires = >=3.8
install_requires =
    ollama
    rich

[options.entry_points]
console_scripts =
    haiku = haiku:main